Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.1.8, 10.1.17
-
10.1.20
Description
A user saw the following crash when loading a mysqldump backup with encryption enabled in MariaDB 10.1.8:
160919 17:28:30 [ERROR] mysqld got signal 11 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
|
To report this bug, see http://kb.askmonty.org/en/reporting-bugs
|
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
|
Server version: 10.1.8-MariaDB-log
|
key_buffer_size=1048576
|
read_buffer_size=262144
|
max_used_connections=281
|
max_threads=502
|
thread_count=65
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 171895 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
|
Thread pointer: 0x0x0
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x0 thread_stack 0x3c000
|
mysys/stacktrace.c:247(my_print_stacktrace)[0x7f5d9e47f6cb]
|
sql/signal_handler.cc:160(handle_fatal_signal)[0x7f5d9dfe10d5]
|
/lib64/libpthread.so.0(+0x355f20f710)[0x7f5d9d5fa710]
|
fil/fil0fil.cc:1002(fil_mutex_enter_and_prepare_for_io)[0x7f5d9e2e8299]
|
fil/fil0fil.cc:1465(fil_space_get_space)[0x7f5d9e2ecdd2]
|
fil/fil0fil.cc:1584(fil_space_get_flags)[0x7f5d9e2ed149]
|
btr/btr0scrub.cc:835(btr_scrub_start_space(unsigned long, btr_scrub_t*))[0x7f5d9e276044]
|
fil/fil0crypt.cc:1329(fil_crypt_space_needs_rotation)[0x7f5d9e2f50a5]
|
fil/fil0crypt.cc:2238(fil_crypt_thread)[0x7f5d9e2f5a28]
|
/lib64/libpthread.so.0(+0x355f2079d1)[0x7f5d9d5f29d1]
|
/lib64/libc.so.6(clone+0x6d)[0x7f5d9bad88fd]
|
After upgrading to 10.1.17, it is still crashing, but the stack trace is not as useful:
161005 15:39:21 [ERROR] mysqld got signal 11 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
|
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
|
Server version: 10.1.17-MariaDB
|
key_buffer_size=1048576
|
read_buffer_size=262144
|
max_used_connections=5
|
max_threads=502
|
thread_count=3
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 171954 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
|
Thread pointer: 0x0x0
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x0 thread_stack 0x3c000
|
/usr/sbin/mysqld(my_print_stacktrace+0x2b)[0x7fb41721e16b]
|
/usr/sbin/mysqld(handle_fatal_signal+0x475)[0x7fb416d7a375]
|
/lib64/libpthread.so.0(+0x355f20f710)[0x7fb41637f710]
|
/usr/sbin/mysqld(+0x8d7331)[0x7fb417086331]
|
/usr/sbin/mysqld(+0x8dc092)[0x7fb41708b092]
|
/usr/sbin/mysqld(+0x8dc439)[0x7fb41708b439]
|
/usr/sbin/mysqld(+0x8638b4)[0x7fb4170128b4]
|
/usr/sbin/mysqld(+0x8e4405)[0x7fb417093405]
|
/usr/sbin/mysqld(+0x8e4d7a)[0x7fb417093d7a]
|
/lib64/libpthread.so.0(+0x355f2079d1)[0x7fb4163779d1]
|
/lib64/libc.so.6(clone+0x6d)[0x7fb41485d8fd]
|